2018-06-28  Zalan Bujtas  <zalan@apple.com>

        [LFC] Add Display::Box::nonCollapsedMarginBox for verification purposes.
        https://bugs.webkit.org/show_bug.cgi?id=187140

        Reviewed by Antti Koivisto.

        * layout/FormattingContext.cpp:
        (WebCore::Layout::FormattingContext::computeFloatingHeightAndMargin const):
        (WebCore::Layout::FormattingContext::computeOutOfFlowHorizontalGeometry const):
        * layout/Verification.cpp:
        (WebCore::Layout::outputMismatchingBoxInformationIfNeeded):
        * layout/blockformatting/BlockFormattingContext.cpp:
        (WebCore::Layout::BlockFormattingContext::computeInFlowHeightAndMargin const):
        * layout/displaytree/DisplayBox.cpp:
        (WebCore::Display::Box::nonCollapsedMarginBox const):
        * layout/displaytree/DisplayBox.h:
        (WebCore::Display::Box::setVerticalNonCollapsedMargin):

2018-06-28  Zalan Bujtas  <zalan@apple.com>

        [LFC] The margin bottom of the document element does not collapse with its last inflow child's bottom margin.
        https://bugs.webkit.org/show_bug.cgi?id=187135

        Reviewed by Antti Koivisto.

        * layout/blockformatting/BlockFormattingContext.h:
        * layout/blockformatting/BlockFormattingContextGeometry.cpp:
        (WebCore::Layout::BlockFormattingContext::Geometry::inFlowNonReplacedHeightAndMargin):
        * layout/blockformatting/BlockMarginCollapse.cpp:
        (WebCore::Layout::BlockFormattingContext::MarginCollapse::marginBottom):
        (WebCore::Layout::BlockFormattingContext::MarginCollapse::isMarginBottomCollapsedWithParent):
        (WebCore::Layout::BlockFormattingContext::MarginCollapse::collapsedMarginBottomFromLastChild):

2018-06-28  Dirk Schulze  <krit@webkit.org>

        [css-masking] Update clip-path box mapping to unified box
        https://bugs.webkit.org/show_bug.cgi?id=185797

        Reviewed by Simon Fraser.

        The box mapping for fill-box, stroke-box, view-box on HTML elements